<resources>

<string name="app_name">Wake Up!</string>
<string name="hello_bram">Welk uur begin je morgen?</string>
    <string name="first_hour">Het eerste uur</string>
    <string name="second_hour">Het tweede uur</string>
    <string name="third_hour">Het derde uur</string>
    <string name="button_new">ButtonNew</string>
    <string name="delete_button">ButtonDelete</string>
    <string name="silence_button">SilenceButton</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New Alarm</string>
    <string name="set_alarm">Zet mijn alarm</string>
    <string name="delete_alarm">Dit alarm verwijderen?</string>
    <string name="create_alarm1">Een alarm zetten voor het eerste uur?</string>
    <string name="create_alarm2">Een alarm zetten voor het tweede uur?</string>
    <string name="create_alarm3">Een alarm zetten voor het derde uur?</string>
    <string name="yes">Alarm starten</string>
    <string name="cancel">Annuleer</string>
    <string name="new1">New</string>
    <string name="delete">Delete</string>
    <string name="silent">Sssst!</string>
    <string name="storage">Storage</string>
    <string name="dialog_question">Wil je een alarm zetten voor school of voor iets anders?</string>
    <string name="else_question">Voor wanneer wil je dit alarm zetten?</string>
    <string name="vandaag">Vandaag</string>
    <string name="morgen">Morgen</string>
    <string name="school">Voor school</string>
    <string name="anders">Iets anders</string>
    <string name="about">Over deze app</string>
    <string name="voice">Stembediening</string>
    <string name="choose_time">Kies het tijdstip</string>
    <string name="alarm_anders">Voor welk tijdstip wil je dit alarm zetten? </string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="alarm_set">Je hebt nog geen alarm gezet</string>
    <string name="alarm_set_text_1">Je hebt een alarm gezet voor het eerste uur</string>
    <string name="alarm_set_text_2">Je hebt een alarm gezet voor het tweede uur</string>
    <string name="alarm_set_text_3">Je hebt een alarm gezet voor het derde uur</string>

</resources>
