<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#444"
    android:animateLayoutChanges="true"
    tools:context="com.example.sander.wakeup.MainActivity2">

    <TextView
        android:text="@string/alarm_set"
        android:textColor="#ffffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:textSize="40sp"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <AnalogClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/analogClock"
        android:layout_above="@+id/TimeText"
        android:layout_centerHorizontal="true" />

       <ImageButton
        android:src="@drawable/ic_new"
        android:contentDescription="@string/button_new"
        android:text="@string/new1"
        android:background="@drawable/round_button"
           android:alpha="1"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:id="@+id/ButtonNew"
           android:onClick="NewScreen1"
           android:layout_alignTop="@+id/ButtonDelete"
           android:layout_centerHorizontal="true" />

    <ImageButton
        android:src="@drawable/ic_delete1"
        android:contentDescription="@string/delete_button"
        android:onClick="DeleteDialog1"
        android:text="@string/delete"
        android:background="@drawable/round_button"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:id="@+id/ButtonDelete"
        android:layout_alignTop="@+id/silence_button"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />


    <ImageButton
        android:src="@drawable/ic_silent1"
        android:contentDescription="@string/silence_button"
        android:onClick="StopAlarm"
        android:id="@+id/silence_button"
        android:visibility="invisible"
        android:background="@drawable/round_button"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_above="@+id/analogClock"
        android:layout_alignLeft="@+id/ButtonNew"
        android:layout_alignStart="@+id/ButtonNew" />


    <TextView
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/TimeText"
        android:textSize="26sp"
        android:textColor="#ffffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/ButtonNew"
        android:layout_alignStart="@+id/ButtonNew" />


</RelativeLayout>
