<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#444"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity">

    <TextView android:text="@string/hello_bram"
        android:textSize="30sp"
        android:textColor="#ffffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:onClick="CreateDialog1"
        android:background="@drawable/rectanglebutton"
        android:text="@string/first_hour"
        android:textStyle="bold"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:id="@+id/button3" />
    <Button
        android:onClick="CreateDialog2"
        android:background="@drawable/rectanglebutton"
        android:text="@string/second_hour"
        android:textStyle="bold"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />
    <Button
        android:onClick="CreateDialog3"
        android:background="@drawable/rectanglebutton"
        android:text="@string/third_hour"
        android:textStyle="bold"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />


</RelativeLayout>
