<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#444">

    <Button
        android:onClick="school"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/school"
        android:id="@+id/button5"
        android:layout_marginTop="98dp"
        android:background="@drawable/rectanglebutton"
        android:layout_below="@+id/QuestionView"
        android:layout_centerHorizontal="true" />

    <Button
        android:onClick="SomethingElse"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/anders"
        android:id="@+id/button6"
        android:background="@drawable/rectanglebutton"
        android:layout_marginBottom="110dp"
        android:layout_above="@+id/dateText"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dialog_question"
        android:id="@+id/QuestionView"
        android:textColor="#ffffffff"
        android:textSize="27sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/dateText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:textColor="#ffffffff"
        android:textSize="23sp" />
</RelativeLayout>