<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#444"
    android:id="@+id/else_group">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="85dp">

        <RadioButton
            android:checked="true"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:id="@+id/radioButton"
            android:textColor="#ffffffff"
            android:text="@string/vandaag"
            android:textSize="19sp"
            android:layout_gravity="center_horizontal"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:text="@string/morgen"
            android:id="@+id/radioButton2"
            android:textColor="#ffffffff"
            android:layout_gravity="center_horizontal"
            android:textSize="19sp"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/else_question"
        android:id="@+id/textView4"
        android:textColor="#ffffffff"
        android:textSize="28sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:background="@drawable/rectanglebutton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_time"
        android:id="@+id/button7"
        android:onClick="changeTime"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:textSize="29sp"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:id="@+id/textView5"
        android:layout_alignLeft="@+id/button7"
        android:layout_alignStart="@+id/button7"
        android:layout_below="@+id/button7"
        android:layout_alignRight="@+id/button7"
        android:layout_alignEnd="@+id/button7"
        android:layout_marginTop="20dp"/>

    <EditText
        android:textColor="@color/white"
        android:hint="Label"
        android:textColorHint="@color/white"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLabel"
        android:layout_below="@+id/radioGroup"
        android:layout_alignRight="@+id/button7"
        android:layout_alignEnd="@+id/button7" />


</RelativeLayout>